--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "start": "node dist/src/app.js",
     "build": "tsc",
     "clean-build": "rm -rfd dist && tsc"
   },
@@ -12,6 +14,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/assert": "^1.5.7",
+    "@types/express": "^4.17.18",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
